# monoalg_deploy_server

./: Paciente2Fatia52D.ini  Paciente7Fatia52D.ini  README.md  SHdoScriptProCluster.sh  aggGeraCSV.py  aggregated_result.csv  base.ini  build.sh  conf.ini  cubo.ini  dontdelete.ini  exportBatchMPI.sh  gitignore  mchines.txt  meshe  plainMesh.ini  protocolo.ini  readme.txt  sciptResultadosBatch.py  script_modificar_malha.py  spiral_lines.csv  trocaColunas.py
AjusteSigma/output_run_1_sigma_C_1.2_sigma_factor_0.0125,0.02/: resultado.csv  saveprotocolo.ini
AjusteSigma/output_run_1_sigma_C_1.2_sigma_factor_0.0125,0.02/restore4580/: outputlog.txt  protocolo.ini
AjusteSigma/output_run_1_sigma_C_1.2_sigma_factor_0.0125,0.02/save/: Vm.Esca0000000  activation_info_it_0.acm  geometry.geo  geometry.geo.vis  original_configuration.ini  outputlog.txt  simulation_result.case
batch_python/: batch_cable_config.ini  protocolo.py  protocolo_ParteMalha.py  scriptThais.py
batch_trad/: 2d_example.ini  batch_trad_example.ini
bsbash/: build_functions.sh  find_functions.sh
files_configs/: teste2DPaciente7.ini  teste3DPaciente2.ini  teste3DPaciente2ActTimes.ini  teste3DPaciente7.ini
my_configs/: cuboid-with-fibrosis-and-ischemia.ini
scripts/: plot_trace.py
scripts/purkinje-netwok-reader/: CMakeLists.txt  main.cpp
src/: main_batch_prot.c  main_expand_scar.c
src/alg/grid/: grid.c  grid.h
src/config/: domain_config.h
src/domains_library/: domain_helpers.c  mesh_info_data.h
src/matrix_assembly_library/: matrix_assembly.c
src/save_mesh_library/: save_mesh.c
(+56 files in other folders)
